# ulauncher-keepassxc

./: Makefile  README.md  pyproject.toml  techstack.md  techstack.yml
tests/keepassxc/: test_keepassxc_db.py
